--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav class="navBar">
     <h1>foggyzeus</h1>
     <p style="color: rgb(90, 90, 90);">
-      why did i ever install visual studio code
+      wwhat the fuck am i doing 
     </p>
   </nav>
 
