--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>foggy cdn</title>
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/media/me.png">
-  <meta property="og:title" content="foggyzeus - a portfolio">
-  <meta property="og:image" content="https://portfolio.foggyzeus.com/media/me.png">
-  <meta property="og:type" content="article">
-  <meta property="og:description" content="WHY DID I INSTALL AND OPEN VISUAL STUDIO CODE I REGRET IT SO MUCH THIS THING IS A GENUINE PAIN TO HUMANITY AND SHOULD BE SHOT AND KILLED IN THE STREET">
-  <meta property="og:url" content="https://portfolio.foggyzeus.com">
-  <meta property="og:header" content="why did i make this"/>
+  <link rel="icon" href="/media/.png">
 </head>
 
 <body>
   <nav class="navBar">
-    <h1>fuck off</h1>
+    <h1>czOS - CDN</h1>
     <p style="color: rgb(90, 90, 90);">
-      this is a cdn
+      bunch of medias in this site innit
     </p>
   </nav>
+
+  <div class="body">
+    <div class="box">
+      can we like go away now
+    </div>
+  </div>
 
   <footer class="siteFooter">
     <a class="footerLink" href="https://portfolio.foggyzeus.com/"><h1>go back</h1></a>
