--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       bunch of medias in this site innit
     </p>
   </nav>
-
+  <div class="break"></div>
   <div class="body">
     <div class="box">
       can we like go away now
