--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <footer class="siteFooter">
-    <a class="footerLink" href="https://portfolio.foggyzeus.com/"><h1>go back</h1></a>
+    <a class="footerLink" href="https://www.foggyzeus.com/"><h1>go back</h1></a>
   </footer>
 </body>
 
